# FilmScanToGif

./: .gitignore  CMakeLists.txt  Info.plist  README.md  wxWidgetsChanges.md
rss/settings/: CMakeLists.txt  RC16Layout.xml
src/: CMakeLists.txt  LoadedImage.cpp  LoadedImage.h  croppedimgwindow.cpp  croppedimgwindow.h  focalpointdialog.h  imagealigndialog.h  loadedimage.cpp  loadedimage.h  main.cpp
src/settings/: CMakeLists.txt  Nimslo3DLayout.xml  copy-assets.cmake  layouts.xml
src/tools/: animationdata.h  animator.cpp  animator.h  bitmaptransforms.cpp  bitmaptransforms.h  framesequence.h  frametiming.h  imagecombinator.cpp  imagecombinator.h  layoutmanager.cpp  layoutmanager.h  subbmprect.cpp  subbmprect.h
src/ui/: animationcontrols.cpp  animationcontrols.h  croppedimgwindow.cpp  croppedimgwindow.h  exportdialog.cpp  exportdialog.h  imagealigndialog.h
